<resources>
    <string name="app_name">Training</string>
    <string name="action_settings">Settings</string>
    <string name="api_key">AIzaSyAKamkzZEewlCs5ZkDi5DjoFtwZdu7yr5g</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="material_button">Material Button</string>
    <string name="toggle_buttons">Toggle Buttons</string>
    <string name="chips">Chips</string>
    <string name="checkable">checkable</string>
    <string name="strok">Strok</string>
    <string name="corner_radius">Corner Radius</string>
    <string name="chip_icon">Chip Icon</string>

    <string name="switches">Switch</string>
    <string name="text_input_layout">Text Input Layout</string>
    <string name="enter_text">enter text</string>
    <string name="check_box">Check box</string>
    <string name="simple_dialog">simple dialog</string>
    <string name="single_choice_dialog">Single choice dialog</string>
    <string name="multi_choice_dialog">Multi Choice Dialog</string>
    <string name="progress_dialog">Progress Dialog</string>
    <string name="date_picker_dialog">Date Picker Dialog</string>
    <string name="time_picker_dialog">Time Picker Dialog</string>
    <string name="bottom_dialog">Bottom Dialog</string>
    <string name="okay">OKAY</string>
    <string name="list_items">List Items</string>
    <string name="widgets">Widgets</string>
    <string name="recycler_items">Recycler Items</string>
    <string name="dialogs">Dialogs</string>
    <string name="cancel_button">Cancel button</string>
    <string name="rename_file">Rename File</string>
    <string name="save">Save</string>
    <string name="enter_file_name">Enter File Name</string>
    <string name="file_name">File Name</string>
    <string name="close_icon">Close Icon</string>
    <string name="radio_group">Radio Group</string>
    <string name="item1">item1</string>
    <string name="item2">item2</string>
    <string name="item3">item3</string>
    <string name="version">Version</string>
    <string name="version_name">Version name...</string>
    <string name="add">ADD</string>
    <string name="minimum_sdk">Minimum SDK</string>
    <string name="description">Description...</string>
    <string name="login">Login</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_username">Enter username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="login_here">Login here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="fragment_sample_activity">Fragment sample activity</string>
    <string name="fragment_1">Fragment 1</string>
    <string name="send_to_fragment_two">Send to fragment two</string>
    <string name="send_to_fragment_one">Send to fragment one</string>
    <string name="fargment_2">Fargment 2</string>
    <string name="label_btn_txt_finish">Finish</string>
    <string name="label_home">Home</string>
    <string name="label_search">Search</string>
    <string name="label_profile">Profile</string>
    <string name="label_orders">Orders</string>
    <string name="label_bottom_nav_activity">Bottom Nav Activity</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="send">send</string>
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="call">Call</string>
    <string name="title_vp">ViewPager Activity</string>
    <string name="title_vp_with_tl">ViewPager TabLayout</string>
    <string name="act_practice_nav">Practice Nav Actvitiy</string>
    <string name="act_tabs_with_viewpager2">Tabs with ViewPager2</string>
    <string name="act_slider">ViewPager2Slider</string>
    <string name="act_tabs">Tabs</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_rationale">We need this permission</string>
    <string name="desc_rationale">This app relies on this permission. We require access to make your experience better with us. We will not share any user data with third party apps. For further info read our privacy policy</string>
    <string name="act_map">Maps Activity</string>
    <string name="act_places">PLaces Activity</string>
    <string name="select_image">Select Image</string>
    <string name="take_picture">Take picture</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="desc">Desc</string>
    <string name="act_image">Camera Request Activity</string>
    <string name="image">Image</string>
    <string name="photos_activity">Photos Activity</string>
    <string name="posts_activity">Posts Activity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="dogs_activity">Dogs Activity</string>
    <string name="dogs_activity_breed">Breed and Image</string>
    <string name="dogs_activity_auto">Reload Breed</string>
    <string name="default_notification_channel_id">com.icg.training</string>

</resources>