<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.icg.training.MainActivity">
    <item
        android:id="@+id/action_widgets"
        android:orderInCategory="100"
        android:title="@string/widgets"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_list_items"
        android:orderInCategory="100"
        android:title="@string/list_items"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_recycler_items"
        android:orderInCategory="100"
        android:title="@string/recycler_items"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_dialog"
        android:orderInCategory="100"
        android:title="@string/dialogs"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sample_fragment"
        android:orderInCategory="100"
        android:title="@string/fragment_sample_activity"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_practice_activity"
        android:orderInCategory="100"
        android:title="@string/act_practice_nav"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tabs_activity"
        android:orderInCategory="100"
        android:title="@string/act_tabs"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_viewpager2_activity"
        android:orderInCategory="100"
        android:title="@string/act_slider"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tabs_with_viewpager_activity"
        android:orderInCategory="100"
        android:title="@string/act_tabs_with_viewpager2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_maps_activity"
        android:orderInCategory="100"
        android:title="@string/act_map"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_places_activity"
        android:orderInCategory="100"
        android:title="@string/act_places"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_image_activity"
        android:orderInCategory="100"
        android:title="@string/act_image"
        app:showAsAction="never"/>
    <item
        android:id="@+id/act_photos"
        android:orderInCategory="100"
        android:title="@string/photos_activity"
        app:showAsAction="never"/>
    <item
        android:id="@+id/act_posts"
        android:orderInCategory="100"
        android:title="@string/posts_activity"
        app:showAsAction="never"/>
    <item
        android:id="@+id/act_dogs"
        android:orderInCategory="100"
        android:title="@string/dogs_activity"
        app:showAsAction="never"/>
    <item
        android:id="@+id/act_dog_auto"
        android:orderInCategory="100"
        android:title="@string/dogs_activity_auto"
        app:showAsAction="never"/>
    <item
        android:id="@+id/act_dogs_breed_img"
        android:orderInCategory="100"
        android:title="@string/dogs_activity_breed"
        app:showAsAction="never"/>
</menu>