<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.icg.training.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home2" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.icg.training.ui.SearchFragment"
        android:label="@string/label_search"
        tools:layout="@layout/fragment_search2" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.icg.training.ui.OrdersFragment"
        android:label="@string/label_orders"
        tools:layout="@layout/fragment_orders2" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.icg.training.ui.ProfileFragment"
        android:label="@string/label_profile"
        tools:layout="@layout/fragment_profile2" />
</navigation>