<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/material_button"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mtBtn1"
            android:text="@string/material_button"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:id="@+id/mtBt2"
            android:text="@string/material_button"
            app:cornerRadius="5dp"
            app:strokeColor="@color/purple_200"
            app:strokeWidth="3dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:text="Material Button"
            android:id="@+id/mtBtn3"
            app:cornerRadius="2dp"
            app:icon="@android:drawable/ic_menu_gallery" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_buttons"
            android:textSize="20sp" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:id="@+id/tb"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chips"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="10dp"
            android:orientation="horizontal">
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/checkable"
            android:id="@+id/clickable"
            app:chipBackgroundColor="@color/purple_200" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strok"
            app:chipStrokeColor="@color/teal_200"

            app:chipStrokeWidth="2dp" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/corner_radius"
            app:chipCornerRadius="0dp" />
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:closeIconEnabled="true"
                android:text="@string/close_icon"

                app:closeIcon="@drawable/ic_baseline_cancel_24"
                app:closeIconTint="@color/black"
                 android:id="@+id/closeIcon"
                 />

        </LinearLayout>


        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:id="@+id/switchBtn"
            android:text="@string/switches" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_input_layout"
            android:textSize="20sp" />

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@color/white"
           >

       </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/check_box"
            android:textSize="20sp" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_box"
            android:id="@+id/checkbox"
            android:checked="true"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_box"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_box"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/radio_group"
            android:textSize="20sp" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:text="@string/item1"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:text="@string/item2"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:text="@string/item3"
                android:layout_height="wrap_content"/>
        </RadioGroup>
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:progress="70"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="50"/>
        <Spinner
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>