<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="@dimen/cardCornerRadius"
    app:cardElevation="@dimen/cardElevation"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:baselineAligned="false">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/ic_baseline_image_24"
            app:tint="@color/blue"
            android:id="@+id/gallery"
            android:padding="@dimen/padding_16_dp"
            android:contentDescription="@string/desc" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_from_gallery"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:id="@+id/camera"
            android:src="@drawable/ic_baseline_camera_alt_24"
            app:tint="@color/blue"
            android:padding="@dimen/padding_16_dp"
            android:contentDescription="@string/desc" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_picture"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>